# ImgHelp

./: CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/ImgHelp/: ColorConv.py  Crop.py  ImgCompress.py  ImgRotate.py  __init__.py
src/imghelp/: imgcompress.py  imgrotate.py
tests/: test_ColorConv.py  test_Crop.py  test_ImgCompress.py  test_ImgHelp.py  test_ImgRotate.py
