[tool.poetry]
name = "ImgHelp"
version = "0.1.0"
description = "Python package which contains 4 basic image processing functions."
authors = ["Sufang Tan, Jasmine Ortega, Ho Kwan Lio, Maeve Shi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.4.3"
numpy = "^1.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
